--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="account_heading">Accounts</string>
     <string name="todays_expense_heading">Today\'s Expenses</string>
     <string name="statistics_heading">Spending Habits</string>
+    <string name="view_expense_heading">View Expenses</string>
     <string name="add_account">Add Account</string>
     <string name="edit_account">Edit Account</string>
     <string name="add_expense">Add Expense</string>
@@ -20,6 +21,7 @@
     <string name="delete">Delete</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="view">View By:</string>
     <string name="name_hint">5555, Spending, Savings</string>
     <string name="a_type_hint">Credit, Debit, Cash</string>
     <string name="amount_hint">10000</string>
@@ -27,5 +29,10 @@
     <string name="e_type_hint">Food, Education, Gas</string>
     <string name="e_amount_hint">25, 45.52</string>
     <string name="location_hint">Target</string>
-
+    <string name="start">Start Date</string>
+    <string name="end">End Date</string>
+    <string name="year">Year</string>
+    <string name="month">Month</string>
+    <string name="day">Day</string>
+    <string name="done">Done</string>
 </resources>
